# flask-sqlalchemy-tutorial

./: .env.example  README.md  app.py  config.py  pyproject.toml
api/resources/: user.py
models/: users.py
